hide scrollbar and fixed text formatting on home page

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,31 +1,37 @@
-html {
+:root {
   --bg: #fff8e7;
   --text: #343231;
   --accent: #744c84;
 
+  html,
   body {
     padding: 0;
     margin: 0;
     background-color: var(--bg);
     color: var(--text);
   }
+
+  body::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 * {
   box-sizing: border-box;
-  // overflow:hidden
 }
 
 h1 {
   font-size: 60px;
   line-height: 72px;
   font-weight: 600;
-  margin: 0;
+  margin: 0 0 25px 0;
 }
 
 h3 {
-  font-size: 22px;
+  font-size: 24px;
+  line-height: 36px;
   font-weight: 400;
+  margin: 0;
 }
 
 p {
@@ -34,11 +40,12 @@ p {
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 44px;
+    font-size: 40px;
     line-height: 50px;
   }
 
   h3 {
     font-size: 18px;
+    line-height: 28px;
   }
 }
